Fixed Layout Issue and optimize code

--- a/module-2/style.css
+++ b/module-2/style.css
@@ -1,104 +1,78 @@
-
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-	margin: 0;
-	padding: 0;
+body {
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-.row{
-  margin-top: 5%;
-  margin-bottom: 5%;
+.container {
+  width: 95vw;
+  margin: auto;
+  overflow: hidden;
+}
+
+.row {
+  margin-top: 3rem;
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 h1 {
-  margin-bottom: 15px;
+  margin-top: 2rem;
   text-align: center;
-  color: #ff4532;
-  font-size: 50px;
+  font-size: 3rem;
 }
 
-
-.box{
-  width: 100%;
-  overflow: none;
-}
-
-
-.content-name{
-  overflow: none;
-  text-align: center;
+.col {
   border: 4px solid black;
-  width: 100px;
-  height: 40px;
-  padding: 5px;
-  float: right;
-  margin-right: 36px;
-  margin-top: 0px;
-  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-size: 1.3rem;
+  margin: 1rem;
   position: relative;
 }
 
-.content{
-  border: 5px solid black;
-  width: 90%;
-  height: auto;
-  margin: 2.5%;
-  color: black
-  font-size: 25px;
-  padding: 2%;
-  padding-top: 55px;
-  background-color: rgba(0,0,0,0.3);
+.content-name {
+  border: 4px solid black;
+  padding: 5px 30px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  position: absolute;
+  top: -4px;
+  right: -4px;
 }
 
-.name1{
-  background-color: #FFB6C1;
+.content {
+  padding: 3rem 1rem 1rem 1rem;
 }
 
-.name2{
+.name1 {
+  background-color: #ffb6c1;
+}
+
+.name2 {
   color: white;
-  background-color: #FF0000;
+  background-color: #ff0000;
 }
-.name3{
-  background-color: #FFFF00;
+.name3 {
+  background-color: #ffff00;
 }
 
-
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-4 {
-  	float: left;
-    width: 33.33%;
-  }
-}
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6,.col-md-12 {
-    float: left;
+  .row {
+    grid-template-columns: 1fr 1fr;
   }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-12 {
-    margin-left: -10px;
-    width: 100%;
-  }
-  .name3{
-    margin-right: 65px;
-    width: 100px;
+
+  .col:last-child {
+    grid-column: 1 / 4;
   }
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
-  .col-sm-12 {
-  	float: left;
-    width: 100%;
-  }
-  .content-name{
-    margin-right: 30px;
+  .row {
+    grid-template-columns: 1fr;
   }
 }
